# src/main/java/org/recipes/app/infrastructure/repositories/RecipeDataRepository.java
@@ -46,4 +46,10 @@ public class RecipeDataRepository implements RecipeRepository {
     public void deleteAll() {
         recipeJpaRepository.deleteAll();
     }
+
+    @Override
+    public List<String> findAllIngredientNames() {
+//        Sort sort = Sort.by(Sort.Direction.ASC, "ingredients.name");
+        return recipeJpaRepository.findAllIngredientNames();
+    }
 }
